# SC-Toolbox-Redux

./: .gitignore  README.md  RUN_REDUX_MINING.bat  pyproject.toml  redux_mining_launcher.py  redux_mining_launcher_settings.json  skill_launcher.py
core/: launcher_visibility.py  skill_registry.py
core/tests/: test_apply_strict_mining_source_boundary.py  test_non_mining_source_prune_applier.py  test_redux_mining_build.py  test_redux_mining_dist_smoke.py  test_redux_mining_smoke.py  test_skill_registry.py  test_strict_mining_source_boundary_manifest.py  test_verify_mining_cleanup_closeout.py  test_verify_non_mining_source_prune.py  test_verify_strict_mining_source_boundary.py
shared/: app_bootstrap.py  config_models.py
skills/DPS_Calculator/: TURRET_FIX_PROMPT.md  erkul_dropdown_truth.py  erkul_slot_truth.json  erkul_slot_truth.py  pak_cross_audit.py  slot_truth_audit.py  slot_truth_report.txt
skills/DPS_Calculator/services/: slot_extractor.py
skills/Trade_Hub/: trade_hub_app.py  trade_hub_data.py
tools/Mining_Signals/: .gitignore  mining_signals_app.py  requirements.txt
tools/Mining_Signals/hud_tracker/: baseline_report.json  detector_inventory.md  harness.py  hud_color_calibration.json  learned_lexicon.json  mineral_color_calibration.json  proportions.py  proportions_region2.py  rigid_body.py  world_model.json  world_model_region2.json
tools/Mining_Signals/ocr/: _aspect_spot_check.py  _v2_sanity_check.py  _v3_canonical_check.py  _v3_sanity_check.py  export_crnn_to_onnx.py  onnx_hud_reader.py  paddle_client.py  pretrain_crnn.py  screen_reader.py  (+15 more)
(+212 files in other folders)
